# http-exchange-instantiations

./: CHANGELOG.md  README.md  http-exchange-instantiations.cabal
.github/workflows/: build.yaml
app-http-insecure/: Main.hs
app-http-secure/: Main.hs
src-chanimpl/: SocketChannel.hs  SocketInterruptibleChannel.hs  TlsChannel.hs  TlsInterruptibleChannel.hs
src/Http/Exchange/: Network.hs  Tls.hs
