cabal-version:   3.0
name:            http-exchange-instantiations
version:         0.1.3.1
synopsis:        Instantiations of http-exchange
description:     Instantiations of http-exchange.
license:         BSD-3-Clause
license-file:    LICENSE
author:          Andrew Martin
maintainer:      amartin@layer3com.com
homepage:        https://github.com/byteverse/http-exchange-instantiations
bug-reports:
  https://github.com/byteverse/http-exchange-instantiations/issues

copyright:       2023 Andrew Martin
category:        Network
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==9.4.8 || ==9.6.3 || ==9.8.1

common build-settings
  default-language: GHC2021
  ghc-options:      -Wall -Wunused-packages

library chanimpl
  import:          build-settings
  ghc-options:     -O2
  exposed-modules:
    SocketChannel
    SocketInterruptibleChannel
    TlsChannel

  build-depends:
    , base                   >=4.16.3.0 && <5
    , byteslice              >=0.2.11
    , bytestring             >=0.11
    , error-codes            >=0.1.1
    , network                >=3.1.4
    , network-unexceptional  >=0.2
    , stm                    >=2.5.1.0
    , tls                    >=1.8

  hs-source-dirs:  src-chanimpl

library
  import:          build-settings
  ghc-options:     -O2
  exposed-modules:
    Http.Exchange.Network
    Http.Exchange.Tls

  build-depends:
    , base                   >=4.16.3.0
    , chanimpl
    , http-exchange          >=0.1.1
    , http-interchange       >=0.3.1
    , network                >=3.1.4
    , network-unexceptional  >=0.2
    , stm                    >=2.5.1.0
    , tls                    >=1.7

  hs-source-dirs:  src
  mixins:
    http-exchange (Exchange as SocketExchange) requires (Channel as SocketChannel),
    http-exchange (Exchange as TlsExchange) requires (Channel as TlsChannel),
    http-exchange (Exchange as SocketInterruptibleExchange) requires (Channel as SocketInterruptibleChannel)

executable http-insecure
  import:         build-settings
  ghc-options:    -O2
  main-is:        Main.hs
  build-depends:
    , base                          >=4.16.3.0
    , http-exchange-instantiations
    , http-interchange              >=0.3.1
    , network                       >=3.1.4
    , pretty-show                   >=1.10

  hs-source-dirs: app-http-insecure

executable http-secure
  import:         build-settings
  ghc-options:    -O2
  main-is:        Main.hs
  build-depends:
    , base                          >=4.16.3.0
    , data-default                  >=0.7.1
    , http-exchange-instantiations
    , http-interchange              >=0.3.1
    , network                       >=3.1.4
    , pretty-show                   >=1.10
    , tls                           >=1.7

  hs-source-dirs: app-http-secure

source-repository head
  type:     git
  location: git://github.com/byteverse/http-exchange-instantiations.git
